Add admin module and deactivate login for disabled users